# objecttracker

./: CMakeLists.txt  README.md  objecttracker.cpp  objecttracker.h
include/: objecttracker.h
src/: objecttracker.cpp
